<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/btn_conn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#fff"
        android:background="@drawable/btn_conn_selector"
        android:layout_marginTop="2dp"
        android:padding="10dp"
        android:text="@string/usb_btn_conn" >
    </Button>

    <EditText
        android:id="@+id/txt_content"
        android:layout_width="match_parent"
        android:layout_height="135dp"
        android:ems="10"
        android:padding="2dp"
        android:gravity="center_vertical|top"
        android:background="#fff"
        android:layout_marginTop="2dp"
        android:text="@string/usb_hoin_enterprise_vision"
        android:textSize="16sp" >
    </EditText>

    <Button
        android:id="@+id/btnSend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textColor="#fff"
        android:layout_marginBottom="3dp"
        android:background="@drawable/other_btn_selector"
        android:layout_marginTop="2dp"
        android:text="@string/usb_btnSend" >
    </Button>

    <Button
        android:id="@+id/qr_code_Send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textColor="#fff"
        android:layout_marginBottom="3dp"
        android:background="@drawable/other_btn_selector"
        android:layout_marginTop="2dp"
        android:text="@string/usb_qr_code_Send" >
    </Button>

    <Button
        android:id="@+id/btn_test"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="3dp"
        android:textColor="#fff"
        android:background="@drawable/other_btn_selector"
        android:layout_marginTop="2dp"
        android:text="@string/usb_btn_test" >
    </Button>

    <Button
        android:id="@+id/btnClose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="3dp"
        android:textColor="#fff"
        android:background="@drawable/other_btn_selector"
        android:layout_marginTop="2dp"
        android:text="@string/usb_btnClose" >
    </Button>

</LinearLayout>
