<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/title_paired_devices"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#000"
        android:paddingLeft="3dp"
        android:text="@string/wifi_lblAddressIp"
        android:textColor="#fff" />

    <EditText
        android:id="@+id/txt_ip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="35dp"
        android:gravity="center_vertical"
        android:paddingLeft="5dp"

        android:text="192.168.1.100"
        android:textSize="16sp"
        android:background="#fff"/>
    <Button
        android:id="@+id/btn_conn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_conn_selector"
        android:layout_marginTop="3dp"
        android:textColor="#fff"
        android:padding="10dp"
        android:text="@string/wifi_btnConn" />

    <EditText
        android:id="@+id/txt_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="120dp"
        android:layout_marginTop="3dp"
        android:background="#fff"
        android:gravity="center_vertical|top"
        android:text="@string/wifi_txt_content"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btnSend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="3dp"
        android:textColor="#fff"
        android:layout_marginTop="3dp"
        android:background="@drawable/other_btn_selector"
        android:text="@string/wifi_btnPrint" />

    <Button
        android:id="@+id/qr_code_Send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textColor="#fff"
        android:layout_marginBottom="3dp"
        android:background="@drawable/other_btn_selector"
        android:layout_marginTop="3dp"
        android:text="@string/wifi_qr_code_Send" />

    <Button
        android:id="@+id/btn_test"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="3dp"
        android:layout_marginTop="3dp"
        android:textColor="#fff"
        android:background="@drawable/other_btn_selector"
        android:text="@string/wifi_btn_test" />

    <!--
    <Button
        android:id="@+id/btn_opencasher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:background="@drawable/other_btn_selector"
        android:text="@string/btn_opencasher" />
 	-->
    <Button
        android:id="@+id/btnClose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#fff"
        android:layout_marginTop="3dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="3dp"
        android:background="@drawable/other_btn_selector"
        android:text="@string/wifi_btnClose" />

</LinearLayout>
