<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.ics.restaurantapp.printer.USBActivity">

    <LinearLayout
        android:id="@+id/bt_ll"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal" >
        <TextView
            android:id="@+id/usb_header"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:text="@string/usb_header_text"
            android:gravity="center"/>
        <TextView
            android:layout_width="1px"
            android:layout_height="match_parent"
       />
        <TextView
            android:id="@+id/bluetooth_header"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.0"

            android:text="@string/bluetooth_header_text"
            android:gravity="center"/>
        <TextView
            android:layout_width="1px"
            android:layout_height="match_parent"
          />
        <TextView
            android:id="@+id/wifi_header"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.0"

            android:text="@string/wifi_header_text"
            android:gravity="center"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/fragment_ll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.0"
        android:layout_marginTop="10dp"
        android:orientation="vertical">
    </LinearLayout>

</LinearLayout>
