<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_config"
        android:minHeight="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="#FF314A8B">

        <TextView
            android:text="Printer Configuration"

            android:textSize="14dp"
            android:typeface="serif"
            android:textColor="#fff"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:id="@+id/bt_ll"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal" >
        <TextView
            android:id="@+id/usb_header"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:text="@string/usb_header_text"
            android:background="@drawable/header_selector"
            android:gravity="center"/>
        <TextView
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="#000"/>
        <TextView
            android:id="@+id/bluetooth_header"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:background="@drawable/header_selector"
            android:text="@string/bluetooth_header_text"
            android:gravity="center"/>
        <TextView
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="#000"/>
        <TextView
            android:id="@+id/wifi_header"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:background="@drawable/header_selector"
            android:text="@string/wifi_header_text"
            android:gravity="center"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/fragment_ll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.0"
        android:layout_marginTop="10dp"
        android:orientation="vertical">
    </LinearLayout>

</LinearLayout>